src/test/deca/syntax/invalid/expr/test_expr_eq_one_eq.deca
// Description:
//    tests de programme syntaxiquement incorrects : eq avec un seul =
//
// Resultats:
//    Ligne 13: no viable alternative at input '0'
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 2;
    if(a = 0){
        a = 2;
    }
}